--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "puppeteer": "^21.6.1"
     }
 }
